style/web/components/menu/_index.less
// 组件允许单个组件打包，因此默认引入公共基础样式

@import "../../base.less";

@import "./_var.less";

@import "./_mixin.less";

@import "../../mixins/_layout.less";

a.@{prefix}-menu__item {
  text-decoration: none;
  color: unset;

  &:hover,
  &:active {
    color: inherit;
  }
}

// head-menu
.@{prefix}-head-menu {
  position: relative;
  width: 100%;
  background-color: @menu-theme-light;

  &__inner {
    display: flex;
    height: 64px;

    li + li {
      margin-left: 4px;
    }

    .@{prefix}-menu {
      &:first-child {
        margin-left: 24px;
      }
    }
  }

  .@{prefix}-menu__logo:not(:empty) {
    height: 100%;
    margin-right: 32px;
  }

  .@{prefix}-menu {
    flex: 1;
    display: flex;
    align-items: center;
    overflow: auto hidden;
  }

  .@{prefix}-menu__operations {
    &:not(:empty) {
      position: relative;
      display: flex;
      align-items: center;
      height: 64px;
      line-height: 64px;
      text-align: right;
      margin-right: 8px;
      overflow: hidden;
    }

    &-icon {
      width: 40px;
      height: 40px;
      padding: 8px;
      line-height: 40px;
    }
  }

  .@{prefix}-submenu {

    > .@{prefix}-menu__item {
      overflow: unset;

      &::before {
        content: "";
        display: block;
        position: absolute;
        bottom: -20px;
        left: 0;
        right: 0;
        height: 20px;
      }
    }
  }

  .@{prefix}-menu__item {
    min-width: @head-menu-item-width;
    height: @head-menu-item-height;
    line-height: @head-menu-item-height;
    justify-content: center;
    transition: all @anim-duration-slow cubic-bezier(.645, .045, .355, 1);
  }

  &__submenu {
    border-top: 1px solid @head-menu-submenu-border-color;

    // menu 双层导航使用了 Tabs 实现，需要 tab 样式保持跟 menu theme 一致，不跟随整体亮色/暗色模式切换
    .@{prefix}-tabs {
      background: #fff;

      &__bar {
        background-color: @submenu-dark-item-active-color;
      }

      &__nav-item {
        color: @font-gray-2;

        &-wrapper {
          --ripple-color: @menu-item-animation-bg--light;
        }

        &:not(.@{prefix}-is-disabled):not(.@{prefix}-is-active):hover {

          .@{prefix}-tabs__nav-item-wrapper {
            background-color: @menu-light-hover-bg;
          }
        }

        &.@{prefix}-is-active {
          color: @submenu-item-active-color;
        }

        &.@{prefix}-is-disabled {
          color: @menu-item-disabled-color;
        }

        --ripple-color: @menu-item-animation-bg--light;
      }
    }
  }

  .@{prefix}-menu__popup {
    top: 60px;
    min-width: 100%;
    box-sizing: content-box;
    transform-origin: center top;

    .@{prefix}-menu__item {
      display: flex;
      align-items: center;
      justify-content: flex-start;
      white-space: nowrap;
      padding-left: 16px;
      padding-right: 16px;
      min-width: 100%;
      margin-left: 0;
      color: @head-menu-popup-item-color;
    }

    li + li {
      margin-top: 4px;
      margin-left: 0;
    }
  }

  .@{prefix}-submenu-icon { // to remove
    margin-left: 8px;
  }

  .@{prefix}-fake-arrow {
    margin-left: 8px;
  }

  // 多层情况
  .@{prefix}-menu__popup-inner {

    .@{prefix}-menu__popup {
      top: -8px;
      left: calc(100% + 16px);
      transform-origin: left top;
    }

    .@{prefix}-menu__item {
      text-align: left;
      padding: 0 16px;
      justify-content: space-between;
    }

    .@{prefix}-submenu-icon {
      transform: rotate(270deg);
    }
  }
}
/* ... */

